5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1618_2930.log
== TEST (2019-04-02 11:06:36) 
-- CODE:
from math import*
t = float(input("Digite o tempo: "))
g = 9,81
l = g*(t/2pi)**2
print(l)

-- ERROR:
File "XXXX", line 4
    l = g*(t/2pi)**2
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:06:48) 
-- CODE:
from math import*
t = float(input("Digite o tempo: "))
g = 9,81
l = g*(t/2pi)**2
print(l)

-- ERROR:
File "XXXX", line 4
    l = g*(t/2pi)**2
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:07:27) 
-- CODE:
from math import*
t = float(input("Digite o tempo: "))
g = 9,81
l = g * (t / 2 * pi)**2
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l = g * (t / 2 * pi)**2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:07:48) 
-- CODE:
from math import*
t = float(input("Digite o tempo: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:08:32) 
-- CODE:
from math import*
t = float(input("Digite o tempo: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l)

-- EXECUTION TIME:
0.146938
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
9682.08191746866
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
687240.2258031239
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
2544103.5411699265
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:09:02) 
-- CODE:
from math import pi
t = float(input("Digite o tempo: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:09:08) 
-- CODE:
from math import pi
t = float(input("Digite o tempo: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l)

-- EXECUTION TIME:
0.135036
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
9682.08191746866
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
687240.2258031239
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
2544103.5411699265
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:10:01) 
-- CODE:
from math import pi
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(round(l,4))

-- OUTPUT:
9682.0819
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:10:11) 
-- CODE:
from math import pi
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(round(l,4))

-- EXECUTION TIME:
0.166501
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
9682.0819
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
687240.2258
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
2544103.5412
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:10:34) 
-- CODE:
from math import pi
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l , "metros")

-- OUTPUT:
9682.08191746866 metros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:10:41) 
-- CODE:
from math import pi
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l , "metros")

-- EXECUTION TIME:
0.141041
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
9682.08191746866 metros
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
687240.2258031239 metros
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
2544103.5411699265 metros
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:11:52) 
-- CODE:
from math import pi
t = int(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l , "metros")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:12:00) 
-- CODE:
from math import pi
t = int(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l , "metros")

-- EXECUTION TIME:
0.139058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2930/main.py", line 2, in <module>
    t = int(input())
ValueError: invalid literal for int() with base 10: '20.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:12:17) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l , "metros")

-- OUTPUT:
9682.08191746866 metros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:12:22) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l , "metros")

-- EXECUTION TIME:
0.215364
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
9682.08191746866 metros
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
687240.2258031239 metros
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
2544103.5411699265 metros
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:13:06) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l , "metros")

-- OUTPUT:
9682.08191746866 metros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:13:11) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l , "metros")

-- EXECUTION TIME:
0.176775
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
9682.08191746866 metros
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
687240.2258031239 metros
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
2544103.5411699265 metros
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:34:04) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:34:08) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / 2 * pi)**2
print(l)

-- EXECUTION TIME:
0.247631
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
9682.08191746866
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
687240.2258031239
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
2544103.5411699265
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:34:32) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / (2*pi)**2
print(l)

-- ERROR:
File "XXXX", line 5
    print(l)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:34:58) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / (2*pi)**2
print(l)

-- ERROR:
File "XXXX", line 5
    print(l)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:35:08) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / (2*pi))**2
print(l)

-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:35:11) 
-- CODE:
from math import*
t = float(input("Digite o tempo em segundos: "))
g = 9.81
l = g * (t / (2*pi))**2
print(l)

-- EXECUTION TIME:
0.174642
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313338
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800127
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
